--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"MCserverforus.aternos.me",
+	"ip":"MCserverforus2.aternos.me",
 	"port": "45772",
 	"name": "afkbot1",
 	"auto-night-skip":"true"
