--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"MCserverforus2.aternos.me",
-	"port": "45772",
+	"ip":"Server_forfrands.aternos.me",
+	"port": "45063",
 	"name": "afkbot1",
 	"auto-night-skip":"true"
 }
